--- a/04-react-css/src/index.css
+++ b/04-react-css/src/index.css
@@ -3,3 +3,11 @@ body {
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.red-p {
+  color: red;
+}
+
+.commom-p {
+  color: #000;
+}
