--- a/06-secret-word/src/components/Game.css
+++ b/06-secret-word/src/components/Game.css
@@ -51,3 +51,19 @@
     text-align: center;
     text-transform: uppercase;
 }
+
+.help_container {
+    position: absolute;
+    right: 2em;
+    top: 2em;
+    text-align: center;
+}
+
+.help_container button {
+    display: block;
+    margin-bottom: 0.2em;
+}
+
+.help_container span {
+    font-size: 0.8em;
+}
