--- a/07-requisicoes-http/src/App.css
+++ b/07-requisicoes-http/src/App.css
@@ -5,38 +5,24 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
+.add_products {
+  border-top: 1px solid #FFF;
+  width: 100%;
   padding: 2em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
-.read-the-docs {
-  color: #888;
+.add_products input {
+  display: flex;
+  margin: 0.5em;
+  width: 20em;
+  height: 2em;
+}
+
+.add_products button {
+  margin-top: 2em;;
 }
