--- a/10-mini-blog/src/components/Navbar.module.css
+++ b/10-mini-blog/src/components/Navbar.module.css
@@ -1,34 +1,35 @@
 .navbar {
-display: flex;
-box-shadow: rgba(0, 0, 0, 0.15) 0px -2px 10px 0px;
-justify-content: space-between;
-align-items: center;
-padding: 0.5em 2em;
+    display: flex;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px -2px 10px 0px;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.5em 2em;
 }
 
 .brand {
-font-size: 1.2em;
+    font-size: 1.2em;
 }
 
 .brand span {
-font-weight: 900;
-text-transform: uppercase;
+    font-weight: 900;
+    text-transform: uppercase;
 }
 
 .links_list {
-display: flex;
-list-style: none;
+    display: flex;
+    list-style: none;
 }
 
 .links_list li {
-margin-right: 1em;
+    margin-right: 1em;
 }
 
 .links_list li a {
-padding: 0.4em 0.6em;
+    padding: 0.4em 0.6em;
+    border-radius: 0.2em;
 }
 
 .active {
-background-color: #000;
-color: #fff;
+    background-color: #000;
+    color: #fff;
 }
